src/objects/loan__Aging_History__c.object
<CustomObject>
    <fields>
        <fullName>loan__Date__c</fullName>
        <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Loan__c</fullName>
        <label>Loan</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Aging History</relationshipLabel>
        <relationshipName>Aging_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Aging History</label>
    <nameField>
        <displayFormat>AGID-{0000000000}</displayFormat>
        <label>Aging History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aging History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>